--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Waras Infotech — Intelligent Automation for Modern Businesses</title>
     <meta name="description"
         content="Waras Infotech provides web development, design, marketing, and automation solutions to help modern businesses scale." />
-
+    <link rel="icon" type="image/png" href="waras logo-01.png">
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
